--- a/scss/sections/_login.scss
+++ b/scss/sections/_login.scss
@@ -199,7 +199,7 @@ $h2-font-weight: 400;
       font-weight: 400;
 
       a {
-          color: $principal-de-acento; // Enlace en color de acento
+          color: $texto-principal; // Enlace en color de acento
           text-decoration: none;
           transition: color 0.3s ease;
           &:hover {
