--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -25,5 +25,7 @@ $bootstrap-icons-font-src: url("../node_modules/bootstrap-icons/font/fonts/boots
 @import "./sections/zonadepago.scss";
 @import "./sections/navigation.scss";
 @import "./sections/carrito.scss";
+@import "./sections/terminoscondiciones.scss";
+
 
 
