--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -21,3 +21,4 @@ $bootstrap-icons-font-src: url("../node_modules/bootstrap-icons/font/fonts/boots
 @import "./sections/footer.scss";
 @import "./sections/soporte.scss";
 @import "./sections/trabaja_con_nosotros.scss";
+@import "./sections/conocenos.scss";
