--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,7 +6,7 @@
 @import  "./variables.scss";
 
 // Import Bootstrap
-@import "../node_modules/bootstrap/scss/bootstrap";
+@import 'bootstrap/scss/bootstrap';
 
 $bootstrap-icons-font-src: url("../node_modules/bootstrap-icons/font/fonts/bootstrap-icons.woff2") format("woff2"), url("../node_modules/bootstrap-icons/font/fonts/bootstrap-icons.woff") format("woff");
 @import "../node_modules/bootstrap-icons/font/bootstrap-icons.scss";
